fix/ fixed anchor tag wrapping edit button

--- a/style/_product_overview.scss
+++ b/style/_product_overview.scss
@@ -40,9 +40,8 @@
 
 .product__overview__edit__btn {
   width: 100px;
-  & > a {
-    color: var(--color-primary);
-  }
+  color: var(--color-primary);
+  text-align: center;
 }
 
 .back-icon {
